<resources>
    <string name="app_name">MoneyMe</string>
    <string name="quote_calculator">Quote Calculator</string>
    <string name="calculate_quote">Calculate Quote</string>
    <string name="months_label">%d months</string>
    <string name="dialog_message">Do you already have an account for this application?</string>
    <string name="success_message">Your application is successful!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_yes">Yes. Log me in</string>
    <string name="dialog_no">I\'m New. Start an application</string>
    <string name="your_quota">Your Quota</string>
    <string name="your_information">Your Information</string>
    <string name="name">Name:</string>
    <string name="mobile">Mobile:</string>
    <string name="email">Email:</string>
    <string name="edit">Edit</string>
    <string name="finance_details">Finance Details</string>
    <string name="finance_amount">Finance Amount:</string>
    <string name="repayments_from">Repayments From:</string>
    <string name="apply_now">Apply Now</string>
</resources>
