<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:context=".QuoteActivity">

        <TextView
                style="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/your_quota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                android:id="@+id/your_quota"/>
        <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/your_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/your_quota"
                android:layout_marginTop="32dp"
                android:layout_marginStart="48dp"
                android:id="@+id/your_info_label"/>
        <Switch
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/your_quota"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="48dp"
                android:id="@+id/edit_info_switch"/>

        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/your_info_label"
                android:layout_marginTop="48dp"
                android:layout_marginStart="48dp"
                android:id="@+id/name_label"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_info_switch"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/name_value"/>

        <TextView
                android:text="@string/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_label"
                android:layout_marginTop="45dp"
                android:layout_marginStart="48dp"
                android:id="@+id/mobile_label"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_value"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/mobile_value"/>

        <TextView
                android:text="@string/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mobile_label"
                android:layout_marginTop="45dp"
                android:layout_marginStart="48dp"
                android:id="@+id/email_label"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mobile_value"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/email_value"/>

        <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/finance_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_label"
                android:layout_marginTop="52dp"
                android:layout_marginStart="48dp"
                android:id="@+id/finance_details_label"/>

        <Button
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_value"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="48dp"
                android:id="@+id/finance_details_button"/>

        <TextView
                android:text="@string/finance_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/finance_details_label"
                android:layout_marginTop="48dp"
                android:layout_marginStart="48dp"
                android:id="@+id/finance_amount_label"/>

        <TextView
                tools:text="$5000 over 24 months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/finance_details_button"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/finance_amount_value"/>

        <TextView
                android:text="@string/repayments_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/finance_amount_label"
                android:layout_marginTop="30dp"
                android:layout_marginStart="48dp"
                android:id="@+id/repayments_label"/>

        <TextView
                tools:text="$56.15 weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/finance_amount_value"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/repayments_value"/>

        <Button
                android:text="@string/apply_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repayments_label"
                android:layout_marginTop="30dp"
                android:id="@+id/apply_now"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
